<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/countdown_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/countdown_3"
        android:textColor="@color/countdown_green"
        android:textSize="@dimen/countdown_text"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/countdown_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/countdown_2"
        android:textColor="@color/countdown_yellow"
        android:textSize="@dimen/countdown_text"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/countdown_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/countdown_1"
        android:textColor="@color/countdown_red"
        android:textSize="@dimen/countdown_text"
        android:textStyle="bold"
        android:visibility="invisible"/>

</merge>