<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.alexsem.mental.activity.FlashDisplayActivity">

    <GridLayout
        android:id="@+id/flash_display_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash_display_difficulty"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/flash_display_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_close_margin"
            android:text="@string/flash_display_interval"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/flash_display_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_close_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </GridLayout>

    <Button
        android:id="@+id/flash_display_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/flash_display_start"
        android:textStyle="bold"
        android:theme="@style/Button.Primary"/>

    <org.alexsem.mental.view.CountDownView
        android:id="@+id/flash_display_countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/flash_display_abacus_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <org.alexsem.mental.view.AbacusView
            android:id="@+id/flash_display_abacus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:keepScreenOn="true"/>

        <Button
            android:id="@+id/flash_display_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/flash_display_pause"
            android:visibility="visible"/>

        <Button
            android:id="@+id/flash_display_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/flash_display_resume"
            android:theme="@style/Button.Primary"
            android:textStyle="bold"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
