<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="org.alexsem.mental.fragment.SimpleFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/flash_setup_difficulty"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/flash_setup_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:ms_enableErrorLabel="false"
        app:ms_enableFloatingLabel="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/flash_setup_interval"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_close_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flash_setup_interval_text"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <SeekBar
            android:id="@+id/flash_setup_interval"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_close_margin"
            android:layout_weight="1"
            android:max="45"/>
    </LinearLayout>

    <Button
        android:id="@+id/flash_setup_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/flash_setup_start"
        android:textStyle="bold"
        android:theme="@style/Button.Primary"/>


</LinearLayout>
